# yggdrasil-py-gtk

./: .gitignore  grisha765.flatpakrepo  io.github.grisha765.Drosophila.yml  io.github.grisha765.yggdrasil-go-gtk.yml  io.github.grisha765.yggdrasil-py-gtk.yml  license  makefile  pyproject.toml  readme.md  setup.py
.github/docs/: development.md
.github/workflows/: appimage-publish.yml  binary-publish.yml  flatpak-publish.yml
repo/: config  summary  summary.idx  summary.idx.sig  summary.sig
repo/delta-indexes/6N/: dakXnM8cJZDMI2mkCCdOqQuYI5de+dREngqjF2T_s.index
repo/delta-indexes/BC/: BCk_fD+Um1lyRY5mU_J5QD_0TeI5SEvvysjr6kDvw.index
repo/delta-indexes/JM/: iFhV0YTrIpZTUl49UilaRo5ffBvHIO2eULWhE0+IM.index
repo/delta-indexes/aA/: zSB1n9oYPhd_WrkDJCILPcW_ebh34leT069EKmIAg.index
repo/delta-indexes/bC/: iaub+yP4Y5YSL2Ue4QRGmu31oCzs7hZjEP2pvDXQE.index
repo/delta-indexes/ht/: pIMoT4KA_9yFyOHebMpCymHtUCWjdZBuwPvJ9sMZ0.index
repo/delta-indexes/kW/: rBQTggmTfWLhc2_oibU4Z_DHjeG1+w+im3Jruneu0.index
repo/delta-indexes/qB/: OTabCKKHeCNJK9oPsmD7TNZj1xXU7sZ66YxxsfPtc.index
repo/deltas/6N/dakXnM8cJZDMI2mkCCdOqQuYI5de+dREngqjF2T_s/: 0  superblock
xdg/: io.github.grisha765.Drosophila.desktop  io.github.grisha765.Drosophila.metainfo.xml  io.github.grisha765.yggdrasil-go-gtk.desktop  io.github.grisha765.yggdrasil-go-gtk.metainfo.xml  io.github.grisha765.yggdrasil-py-gtk.desktop  io.github.grisha765.yggdrasil-py-gtk.metainfo.xml
yggui/: __main__.py
yggui/core/: common.py  window.py
yggui/exec/: get_info.py  pkexec_shell.py  shell.py  toggle.py
yggui/func/: config.py  peers.py  pkexec_shell.py  private_key.py  socks.py  ygg.py
yggui/funcs/: config.py  peers.py  private_key.py  socks.py  ygg.py
yggui/ui/: about_dialog.ui  main.ui  peer_dialog.ui  settings.ui  ui.cmb  ui.css  ui.ui
(+19 files in other folders)
