[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasil-go-gtk"
version = "0.0.1"
description = "Simple Libadwaita/GTK 4 frontend that shows status and lets you control Yggdrasil."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "pygobject>=3.52.2",
]

[project.scripts]
yggui = "yggui.__main__:main"

[tool.setuptools.packages.find]
include = ["yggui*"]

[tool.setuptools.package-data]
"yggui.ui" = ["*.ui", "*.css"]

[tool.uv]
package = false

[tool.pyright]
venvPath = '.'
venv = '.venv'
exclude = [
  "**/__pycache__",
  "build/**",
  "dist/**",
  ".flatpak-builder/**",
  "build-dir/**",
]
